<resources>
    <string name="app_name">Family Hub</string>
    <string name="Login_activity_name">Identification</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="username_header">Username</string>
    <string name="password_header">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email address is invalid</string>
    <!-- <string eventName="error_invalid_password">Your password is too short</string> -->
    <string name="error_incorrect_password">Your password is incorrect</string>
    <string name="error_field_required">All fields are required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="title_activity_new_account">New Account</string>
    <string name="sign_up_button">sounds great! sign me up</string>
    <string name="newAcountMainText" translatable="false">-For an easier life style\n-For big families\n-For those who love their family</string>
    <string name="eror_in_system" translatable="false">An error in our system has occurred.</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_new" translatable="false">new</string>
    <string name="sign_up_header" translatable="false">Sign up</string>
    <string name="members_header" translatable="false"><u>family Members</u></string>

    <!--defaults-->
    <string name="full_name_default" translatable="false">FULL NAME</string>
    <string name="phone_default" translatable="false">+000-000-0000</string>
    <string name="email_default" translatable="false">XXX@XXX.XXX</string>
    <string name="bday_default" translatable="false">00/00/0000 (birth day)</string>
    <string name="city_default" translatable="false">XXX (your city)</string>
    <string name="adress_default" translatable="false">XXX street - 000</string>


    <!--SignUp problems-->
    <string name="user_taken" translatable="false">An acount was all ready opend with this E-mail.</string>
    <string name="user_not_proper" translatable="false">E-mail not valid.</string>
    <string name="pass_not_match" translatable="false">Your passwords are not matching.</string>
    <string name="pass_not_proper" translatable="false">The password should be exactly 6 numbers beetwin 0-9.</string>


    <!--sign up page strings-->
    <string name="username_hint">E-mail</string>
    <string name="password_hint">6 Digit Password</string>
    <string name="re_enter_password_hint" translatable="false">Re-enter Password</string>

    <!--Medical-->
    <string name="medic_header" translatable="false">A List</string>

    <!--events-->
    <string name="event_header" translatable="false">EVENT_NAME</string>
    <string name="event_date_header" translatable="false">Date:</string>
    <string name="event_host" translatable="false">Host:</string>
    <string name="event_location" translatable="false">Location:</string>
    <string name="event_coming_text" translatable="false">Coming?</string>
    <string name="event_btn_yes" translatable="false">yes</string>
    <string name="event_btn_no" translatable="false">no</string>
    <string name="event_btn_maybe" translatable="false">maybe</string>
    <string name="event_description_header" translatable="false">Description</string>

    <!--TAGS-->
    <string name="profile_extra_mail_tag" translatable="false">USER_MAIL</string>
    <string name="event_extra_tag" translatable="false">EVENT_KEY</string>


    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="h" translatable="false">sign</string>
    <string name="title_activity_home_screen" translatable="false">homeScreen</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_full_name" translatable="false">israel israeli</string>
    <string name="nav_header_next_event" translatable="false">next: event - date</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="title_activity_family_members" translatable="false">FamilyMembers</string>
    <string name="empty_fields_dialog_message" translatable="false">Oops! you left some fields empty.. Keeping them empty can effect on the application functionality.</string>
    <string name="empty_fields_dialog_title" translatable="false">Some Fields Left Empty</string>
    <string name="keep_on_with_un_filled_fields_button_text" translatable="false">Keep on</string>
    <string name="cancel_keep_on_with_un_filled_fields_button_text" translatable="false">Go back</string>


    <string-array name="privacyOptions">
        <item>Only me</item>
        <item>My family</item>
        <item>Everyone</item>
    </string-array>

    <string-array name="privacyOptionsForMail">
        <item>Everyone</item>
    </string-array>

    //database titles
    <string name="public_usersDB" translatable="false">publicUsers</string>
    <string name="personal_dataDB" translatable="false">personalData</string>
    <string name="family_treeDB" translatable="false">familyTree</string>
    <string name="all_usersDB" translatable="false">allUsers</string>
    <string name="famDB" translatable="false">fam</string>
    <string name="userFeedDB" translatable="false">feed</string>
    <string name="userFeedDateDB" translatable="false">date</string>
    <string name="userEventsDB" translatable="false">events</string>


    //Storage titles
    <string name="post_images" translatable="false">postPhotos</string>
    <string name="profile_images" translatable="false">profileImages</string>

    //familyTree
    <string name="god_name" translatable="false">hod kdushato hacol yachol</string>
    <string name="unkown_name" translatable="false">%unknown%</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="account_header_settings" translatable="false">Account</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <!--Account Preferences-->
    <string name="deleteAccount" translatable="false">Delete My Account</string>
    <string name="title_activity_help" translatable="false">Help</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>

</resources>
