<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".Event">


    <TextView
        android:id="@+id/comingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="80dp"
        android:text="@string/event_coming_text"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yesComingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_yes"
        android:onClick="yesClicked"
        android:text="@string/event_btn_yes"
        android:textColor="#003805"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comingTextView" />

    <Button
        android:id="@+id/notComingButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/bg_no"
        android:onClick="noClicked"
        android:text="@string/event_btn_no"
        android:textColor="#450505"
        app:layout_constraintBottom_toBottomOf="@+id/yesComingButton"
        app:layout_constraintStart_toEndOf="@+id/yesComingButton"
        app:layout_constraintTop_toTopOf="@+id/yesComingButton" />

    <Button
        android:id="@+id/maybeComingButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_maybe"
        android:onClick="maybeClicked"
        android:text="@string/event_btn_maybe"
        android:textColor="#533005"
        app:layout_constraintBottom_toBottomOf="@+id/yesComingButton"
        app:layout_constraintEnd_toStartOf="@+id/yesComingButton"
        app:layout_constraintTop_toTopOf="@+id/yesComingButton" />

    <TextView
        android:id="@+id/hostHeaderTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/event_host"
        android:textColor="#000000"
        android:textSize="@dimen/size_text_event_props"
        app:layout_constraintBottom_toTopOf="@+id/dateHeaderTextV"
        app:layout_constraintStart_toStartOf="@+id/dateHeaderTextV" />

    <TextView
        android:id="@+id/hostDataTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToHost"
        android:text="Yossi Sembira"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/size_text_event_props"
        app:layout_constraintBottom_toBottomOf="@id/hostHeaderTextV"
        app:layout_constraintStart_toEndOf="@id/hostHeaderTextV"
        app:layout_constraintTop_toTopOf="@id/hostHeaderTextV" />

    <TextView
        android:id="@+id/dateHeaderTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/event_date_header"
        android:textColor="#000000"
        android:textSize="@dimen/size_text_event_props"
        app:layout_constraintBottom_toTopOf="@+id/locationHeaderTextV"
        app:layout_constraintStart_toStartOf="@+id/locationHeaderTextV" />

    <TextView
        android:id="@+id/dateDataTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="shuglibaba"
        android:textSize="@dimen/size_text_event_props"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateHeaderTextV"
        app:layout_constraintStart_toEndOf="@+id/dateHeaderTextV" />


    <TextView
        android:id="@+id/locationHeaderTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/event_location"
        android:textColor="#000000"
        android:textSize="@dimen/size_text_event_props"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextV"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/locationDataTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="somewere"
        android:textSize="@dimen/size_text_event_props"
        app:layout_constraintBaseline_toBaselineOf="@+id/locationHeaderTextV"
        app:layout_constraintStart_toEndOf="@+id/locationHeaderTextV" />

    <TextView
        android:id="@+id/descriptionTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/event_description_header"
        android:textAlignment="textStart"
        android:textSize="@dimen/size_text_event_props"
        android:textStyle="normal"
        android:textColor="#000000"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/event_descriptionTV"
        app:layout_constraintStart_toStartOf="@+id/locationHeaderTextV" />

    <ImageView
        android:id="@+id/comingStateImageV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:onClick="chooseAgain"
        app:layout_constraintBottom_toBottomOf="@+id/comingTextView"
        app:layout_constraintStart_toEndOf="@+id/comingTextView"
        app:layout_constraintTop_toTopOf="@+id/comingTextView"
        app:srcCompat="@drawable/thinking_50" />

    <EditText
        android:id="@+id/eventDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:hint="The event description"
        app:layout_constraintBottom_toBottomOf="@id/event_descriptionTV"
        app:layout_constraintEnd_toEndOf="@id/event_descriptionTV"
        app:layout_constraintStart_toStartOf="@id/event_descriptionTV"
        app:layout_constraintTop_toTopOf="@id/event_descriptionTV" />

    <EditText
        android:id="@+id/event_dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Date of the event"
        app:layout_constraintBottom_toBottomOf="@+id/dateDataTextV"
        app:layout_constraintStart_toEndOf="@+id/dateDataTextV"
        app:layout_constraintTop_toTopOf="@+id/dateDataTextV" />

    <EditText
        android:id="@+id/event_locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Location of the event"
        app:layout_constraintBottom_toBottomOf="@+id/locationDataTextV"
        app:layout_constraintStart_toEndOf="@+id/locationDataTextV"
        app:layout_constraintTop_toTopOf="@+id/locationDataTextV" />

    <Button
        android:id="@+id/saveEventBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="saveEvent"
        android:text="Save Event"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/comingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/comingTextView" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/eventDescriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <TextView
        android:id="@+id/event_circleTV"
        android:layout_width="wrap_content"
        style="@style/FirebaseUI.Text.Heading"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Circle"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintEnd_toEndOf="@+id/numberPicker"
        app:layout_constraintStart_toStartOf="@+id/numberPicker" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/event_nameTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_horizontal"
            android:text="@string/event_header"
            android:textColor="@color/colorAccentDark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/leftPic"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/event_nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/event_header"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@id/event_nameTextV"
            app:layout_constraintStart_toEndOf="@id/event_nameTextV" />

        <ImageView
            android:id="@+id/rightPic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_nameEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_event" />

        <ImageView
            android:id="@+id/leftPic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_event" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/event_descriptionTV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="start|top"
        app:layout_constraintBottom_toTopOf="@+id/comingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="goHome"
        android:text="Go to home screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--<ScrollView-->
    <!--android:id="@+id/eventDiscriptionScrollView"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="120dp"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginEnd="16dp"-->
    <!--android:layout_marginBottom="64dp"-->
    <!--android:background="@drawable/description_bg"-->
    <!--android:padding="10dp"-->
    <!--app:layout_constraintBottom_toTopOf="@+id/comingTextView"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->

    <!--<EditText-->
    <!--android:id="@+id/eventDiscriptionEditText"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="15dp"-->
    <!--android:hint="place your discription here."-->
    <!--android:inputType="textMultiLine|textAutoComplete"-->
    <!--android:maxLines="5"-->
    <!--android:textAlignment="center"-->
    <!--android:textIsSelectable="true"-->
    <!--tools:layout_editor_absoluteX="171dp"-->
    <!--tools:layout_editor_absoluteY="158dp" />-->
    <!--</LinearLayout>-->
    <!--</ScrollView>-->

    <!--<com.bartoszlipinski.constraint.StaggeredAnimationGroup-->
    <!--android:id="@+id/group"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:constraint_referenced_ids="pic, imageView2, EventNameTextV, hostHeaderTextV, dateDataTextV" />-->

</androidx.constraintlayout.widget.ConstraintLayout>